site/src/main/webapp/css/style.css
/* ... */
	
#account {
	font-size: 12px;
	display: block;
}
	
#account h3 {
	font: 16px/18px 'ProximaNovaBold', Helvetica, sans-serif;
	margin: 0 0 5px 0;
	padding: 0;
}

#account #register, #account #login, #account #forgotPassword, #account #resetPassword {
	width: 282px;
	margin: 10px;
	float: left;
	display: inline;
}

.manage-account-container {
    margin: 40px 0 0 60px;
}

/* Manage Account left-nav*/
#account-menu {
    float: left;
    list-style: none;
    margin: 0;
    padding: 0;
    width: 200px;
}

#account-menu li {
    padding: 6px 0;
}

#account-menu li a {
    font-size: 13px;
    font-family: 'Oxygen', Helvetica, sans-serif;
}

#account-menu li a.active {
    font-weight: bold;
}

form.manage-account {
    width: 300px;
    float: left;
}

form.manage-account input[type="submit"] {
    margin-top: 35px;
}
	
.login_register {
	margin: 20px 0 0;
	float: left;
}

.login_register_alt_links {
	margin: 35px 0 0 30px;
	float: left;
}

#cart {
	width: 920px;
	padding: 10px;
	margin: 10px 20px;
	display: block;
	float: left;
}

.cart_modal {
	margin: 0px !important;
}

.cart_title {
	width: 900px;
	margin: 10px 0;
	padding: 10px;
	font: 14px/18px 'Oxygen', Helvetica, sans-serif;
	background-color: #3e0000;
	color: #fff;
	float: left;
	display: block;
}

#cart .left_content {
	width: 580px;
	float: left;
}

#cart .left_content.wide {
	width: 615px;
}

#cart .right_content {
	width: 260px;
	padding: 10px 20px;
	background: url('../img/sidebarbg.jpg') repeat;
	float: right;
}

	#cart .right_content h3 {
		font: 14px/18px 'Oxygen', Helvetica, sans-serif;
		margin: 0 0 5px 0;
		padding: 0;
	}

#cart_products {
	width: 580px;
	float: left;
}

	#cart_products thead tr th {
		padding: 5px;
		text-align: center;
		font: bold 10px/18px Helvetica, sans-serif;
		text-transform: uppercase;
		color: #333;
	}
	
	#cart_products tbody tr td {
		padding: 10px;
		border-bottom: 1px dotted #C8C3C1;
	}
	
		#cart_products tbody tr td .cartLinkBtn {
			font-size: 11px;
		}
	
	#cart_products tbody tr td.name {
		font: 14px/18px 'Oxygen', Helvetica, sans-serif;
	}
	
		#cart_products tbody tr td.name a {
			text-decoration: none;
		}
	
	#cart_products tbody tr td.value {
		font-family: Helvetica, sans-serif;
		font-size: 16px;
		font-weight: bold;
	}
			
	#cart_products tbody tr td.discount {
		color: #E40037;
	}
	
	#cart_products ul.productOptions {
		padding: 5px 0 0 10px;
		margin: 0;
		list-style-type: none;
	}
	
	#cart_products ul.productOptions li {
		font-family: 'Georgia', serif;
		font-size: 12px;
	}

#wishlist_items {
    width: 580px;
    float: left;
}

    #wishlist_items thead tr th {
        padding: 5px;
        text-align: center;
        font: bold 10px/18px Helvetica, sans-serif;
        text-transform: uppercase;
        color: #333;
    }
    
    #wishlist_items tbody tr td {
        padding: 10px;
        border-bottom: 1px dotted #C8C3C1;
    }
    
        #wishlist_items tbody tr td .cartLinkBtn {
            font-size: 11px;
        }
    
    #wishlist_items tbody tr td.name {
        font: 14px/18px 'Oxygen', Helvetica, sans-serif;
    }
    
        #wishlist_items tbody tr td.name a {
            text-decoration: none;
        }
    
    #wishlist_items tbody tr td.value {
        font-family: Helvetica, sans-serif;
        font-size: 16px;
        font-weight: bold;
    }
            
    #wishlist_items tbody tr td.discount {
        color: #E40037;
    }
    
    #wishlist_items ul.productOptions {
        padding: 5px 0 0 10px;
        margin: 0;
        list-style-type: none;
    }
    
    #wishlist_items ul.productOptions li {
        font-family: 'Georgia', serif;
        font-size: 12px;
    }


.order_summary {
    width: 100%;
}

.multiship_summary {
	width: 80%;
	margin-left: 50px;
}

.multishipGroupRow {
	border: 1px dotted #C8C3C1;
	padding: 4px;
	margin-bottom: 3px;
}

	.multishipGroupRow h4 {
		margin: 0 0 5px;
	}

.multishipGroupShippingCharge {
	font-weight: normal;
	float: right;
}

.multishipGroupShippingCharge:before {
	content: "(";
}

.multishipGroupShippingCharge:after {
	content: ")";
}

.multishipGroupRow:nth-child(even) {
	background-color: #F5F4F1;
}

.order_summary tbody tr td, .multiship_summary tbody tr td {
    vertical-align:middle;
}

#cart_total {
	width: 260px;
	padding: 10px 20px;
	background: url('../img/sidebarbg.jpg') repeat;
	float: right;
}

	#cart_total h3 {
		font: 14px/18px 'Oxygen', Helvetica, sans-serif;
		margin: 0 0 5px 0;
		padding: 0;
	}
	
	#cart_total #subtotal {
		font: 32px/28px 'Oxygen', Helvetica, sans-serif;
	}
	
	#cart_total #orderDiscounts {
		margin-top: 10px;
	    color: #E40037;
	    font-weight: bold;
	}
	
	#cart_total #total_table {
		width: 100%;
		margin: 10px 0;
	}
	
		#cart_total #total_table tr {
			border-bottom: dotted 1px #afafaf;
		}
		
		#cart_total #total_table tr td {
			padding: 5px 0;
		}
		
		#cart_total #total_table tr td.discount {
			color: #E40037;
		}
	
#cart_promo {
	width: 900px;
	padding: 10px;
	background-color: #3e0000;
	color: #fff;
	float: left;
	display: block;
}

	#cart_promo #promoCode {
		border: none;
		padding: 3px 5px;
		margin-left: 5px;
	}
	
	#cart_promo .promo {
		display: inline;
		border: none;
		padding: 5px 6px 5px 10px; 
		margin-left: 5px;
		background: url('../img/sidebarbg.jpg') repeat;
		color: #000;
		border-radius: 10px;
		-moz-border-radius: 10px;
		-webkit-border-radius: 10px;
		font-family: sans-serif;
		line-height: 30px;
	}
	
	#cart_promo_error {
		padding-top: 10px; 
		color: #F4F6EB;
	}
	
	input#promoCode, input.quantityInput {
		border: solid 1px #C4C0BC !important;
		background: #F5F4F1;
	}
	
#checkout {
	margin: 20px 0;
}

#shipping_total {
    font: 30px/26px 'Oxygen', Helvetica, sans-serif;
    margin-bottom: 20px;
}
.payment_info {
    background: #FFFFF2;
    border: 1px solid #E5E5E5;
}

ul#payment_methods,
ul#payment_methods li {
      margin: 0;
      padding: 0;
}

ul#payment_methods li {
      display: inline-block;
}
/* ... */

